# Application

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ppma/application/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ChashCode.h  MhashCode.cpp
app/src/main/java/com/ppma/application/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/ppma/application/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
